# tuari-demo

./: README.md  package-lock.json  package.json
src/: App.tsx  logger.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  ldap.rs  main.rs
